force-app/main/default/objects/AccountContactRelation/fields/Commercial_SPOC__c.field-meta.xml
<CustomField>
    <fullName>Commercial_SPOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial SPOC</label>
    <type>Checkbox</type>
</CustomField>