force-app/main/default/objects/AccountContactRelation/fields/Intervention_Registration_Contact__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Registration_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in the send out of the announcement of a scheduled visit to the correct contact</description>
    <label>Intervention Registration Contact</label>
    <type>Checkbox</type>
</CustomField>