force-app/main/default/objects/AccountContactRelation/fields/Operational_SPOC__c.field-meta.xml
<CustomField>
    <fullName>Operational_SPOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational SPOC</label>
    <type>Checkbox</type>
</CustomField>